minikube_kb8/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: django-gui-service
  labels:
    app: django-gui
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8000
  selector:
    app: django-gui
---
apiVersion: v1
kind: Service
metadata:
  name: django-backend-service
  labels:
    app: django-backend
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8002
  selector:
    app: django-backend
