minikube_kb8/servicenginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-proxy
  namespace: proyecto
spec:
  selector:
    app: nginx-proxy
  ports:
    - protocol: TCP
      port: 8080 
      targetPort: 80  
  type: NodePort
