minikube_kb8/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: minikube.local
      http:
        paths:
          - path: /gui
            pathType: Prefix
            backend:
              service:
                name: django-gui-service
                port:
                  number: 80
          - path: /backend
            pathType: Prefix
            backend:
              service:
                name: django-backend-service
                port:
                  number: 80
